# trustflow-teeapps

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  Occlum.json  README.md  WORKSPACE  build.sh  build_sim.sh  env.sh
.circleci/: config.yml  release-config.yml
.github/ISSUE_TEMPLATE/: issue_template.yaml
bazel/: BUILD.bazel  cppcodec.BUILD  curl.BUILD  fmtlib.BUILD  gperftools.BUILD  httplib.BUILD  kuscia.BUILD  openssl.BUILD  oss_sdk.BUILD  rapidjson.BUILD  repositories.bzl  sf_apis.BUILD  sf_spec.BUILD  spdlog.BUILD  teeapps.bzl
bazel/patches/: aliyun-oss-cpp-sdk-1.9.0.patch  grpc-v1.45.2.patch
deployment/: build.sh  config_templates.yml  deploy_templates.yml
deployment/conf/: unified_attestation.json
deployment/csv/: Dockerfile
deployment/dev/: Dockerfile  build.sh  deploy_templates.yml
deployment/occlum/: Dockerfile  Occlum.json  python.yaml
deployment/prod/: Dockerfile  build.sh  deploy_templates.yml
deployment/sim/: Dockerfile
deployment/tdx/: Dockerfile
docker/: sf-teeapps-dev-ubuntu.Dockerfile  sources.list
integration_test/: README.md  biclassification_eval.json  convert.py  psi.json  train_test_split.json  xgb.json  xgb_predict.json
scripts/: build_csv.sh  build_occlum.sh  build_sim.sh  build_tdx.sh
teeapps/biz/biclassification_eval/: BUILD.bazel  biclassification_eval.py
teeapps/biz/biclassifier_evaluation/: BUILD.bazel  biclassifier_evaluation.py  biclassifier_evaluation_test.py
teeapps/biz/common/: BUILD.bazel  common.py
teeapps/biz/dataset_filter/: BUILD.bazel  dataset_filter.py  dataset_filter_test.py
teeapps/biz/dataset_split/: BUILD.bazel  dataset_split.py  dataset_split_test.py
teeapps/biz/feature_filter/: BUILD.bazel  feature_filter.py
teeapps/biz/lgbm/: BUILD.bazel  lgbm.py
teeapps/biz/lr/: BUILD.bazel  lr.py  lr_test.py
teeapps/biz/pearsonr/: BUILD.bazel  pearsonr.py
teeapps/biz/predict/: BUILD.bazel  predict.py  predict_test_lr.py  predict_test_xgb.py
teeapps/biz/prediction_bias_eval/: BUILD.bazel  prediction_bias_eval.py  prediction_bias_eval_test.py
teeapps/biz/psi/: BUILD.bazel  psi.py  psi_test.py
teeapps/biz/stats_corr/: BUILD.bazel  stats_corr.py  stats_corr_test.py
teeapps/biz/stats_vif/: BUILD.bazel  stats_vif.py  stats_vif_test.py
teeapps/biz/table_statistics/: BUILD.bazel  table_statistics.py  table_statistics_test.py
teeapps/biz/testdata/: BUILD.bazel  lgbm_bin_class.model  lgbm_reg.model  lr.pkl  lr_bin_class.model  lr_reg.model  test1.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  woe_rules.json  xgb.pkl  xgb_bin_class.model  xgb_reg.model
teeapps/biz/testdata/breast_cancer/: alice.csv  bob.csv  breast_cancer.csv
teeapps/biz/testdata/dataset1/: data.csv  data_with_none.csv  schema.json
teeapps/biz/tests/: BUILD.bazel  biclassification_eval_test.py  feature_filter_test.py  lgbm_test.py  lr_test.py  pearsonr_test.py  predict_test_lgbm.py  predict_test_lr.py  predict_test_xgb.py  prediction_bias_eval_test.py  psi_test.py  table_statistics_test.py  train_test_split_test.py  vif_test.py  woe_binning_test.py  woe_substitution_test.py  xgb_test.py
teeapps/biz/train_test_split/: BUILD.bazel  train_test_split.py
teeapps/biz/vif/: BUILD.bazel  vif.py
teeapps/biz/woe_binning/: BUILD.bazel  woe_binning.py  woe_binning_test.py
teeapps/biz/woe_substitution/: BUILD.bazel  woe_substitution.py  woe_substitution_test.py
teeapps/biz/xgb/: BUILD.bazel  xgb.py  xgb_test.py
teeapps/component/: BUILD.bazel  all_translation_cn.json  comp_list.json  component.cc  component.h  component_list.h  eval_param_reader.cc  eval_param_reader.h  main.cc  translation.json  util.cc  util.h
teeapps/component/feature/: woe_binning_component.cc  woe_binning_component.h  woe_substitution_component.cc  woe_substitution_component.h
teeapps/component/ml/eval/: biclassification_component.cc  biclassification_component.h  prediction_bias_component.cc  prediction_bias_component.h
teeapps/component/ml/predict/: lgbm_component.cc  lgbm_component.h  lr_component.cc  lr_component.h  xgb_component.cc  xgb_component.h
teeapps/component/ml/train/: lgbm_component.cc  lgbm_component.h  lr_component.cc  lr_component.h  xgb_component.cc  xgb_component.h
teeapps/component/preprocessing/: feature_filter_component.cc  feature_filter_component.h  psi_component.cc  psi_component.h  train_test_split_component.cc  train_test_split_component.h
teeapps/component/stats/: pearsonr_component.cc  pearsonr_component.h  table_statistics_component.cc  table_statistics_component.h  vif_component.cc  vif_component.h
teeapps/framework/: BUILD.bazel  app.cc  app.h  capsule_manager_client.cc  capsule_manager_client.h  constants.h  main.cc  subprocess.cc  subprocess.h
teeapps/kuscia/: BUILD.bazel  kuscia_client.cc  kuscia_client.h  kuscia_task_config.cc  kuscia_task_config.h
teeapps/local/: BUILD.bazel  local_task_config.cc  local_task_config.h
teeapps/proto/: BUILD.bazel  task.proto
teeapps/proto/params/: biclassifier_evaluation.proto  dataset_filter.proto  dataset_split.proto  lr_hyper_params.proto  predict.proto  prediction_bias_eval.proto  psi.proto  stats_corr_params.proto  vif_params.proto  woe_binning.proto  xgb_hyper_params.proto
teeapps/utils/: BUILD.bazel  crypto_util.cc  crypto_util.h  crypto_util_test.cc  data_uri_util.cc  data_uri_util.h  io_util.cc  io_util.h  json2pb.h  log.cc  log.h  output_dist_data_util.cc  output_dist_data_util.h  ra_util.cc  ra_util.h  task_config_util.cc  task_config_util.h  tool.cc  tool.h
