# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "util",
    srcs = [
        "util.cc",
    ],
    hdrs = [
        "util.h",
    ],
    deps =
        [
            "//teeapps/proto:cc_sf_spec_proto",
        ],
)

cc_library(
    name = "eval_param_reader",
    srcs = [
        "eval_param_reader.cc",
    ],
    hdrs = [
        "eval_param_reader.h",
    ],
    deps =
        [
            ":util",
        ],
)

cc_library(
    name = "component",
    srcs = [
        "component.cc",
    ],
    hdrs = [
        "component.h",
    ],
    deps =
        [
            ":eval_param_reader",
        ],
)

cc_library(
    name = "component_list",
    srcs =
        glob([
            "*/*.cc",
            "ml/*/*.cc",
        ]),
    hdrs =
        glob([
            "*/*.h",
            "ml/*/*.h",
        ]),
    deps =
        [
            ":component",
        ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps =
        [
            ":component_list",
            "@com_github_rapidjson//:rapidjson",
        ],
)
