# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@teeapps//bazel:teeapps.bzl", "teeapps_cc_library")

package(default_visibility = ["//visibility:public"])

teeapps_cc_library(
    name = "kuscia_task_config",
    srcs = ["kuscia_task_config.cc"],
    hdrs = ["kuscia_task_config.h"],
    deps = [
        "//teeapps/kuscia:kuscia_client",
        "//teeapps/utils:crypto_util",
        "//teeapps/utils:data_uri_util",
        "//teeapps/utils:io_util",
        "//teeapps/utils:json2pb",
        "//teeapps/utils:output_dist_data_util",
        "@com_github_rapidjson//:rapidjson",
        "@cppcodec",
        "@kuscia_proto//:cc_kuscia_proto",
        "@sf_apis//:cc_sf_apis_grpc",
        "@sf_spec//:cc_sf_spec_proto",
        "@yacl//yacl/base:exception",
    ],
)

teeapps_cc_library(
    name = "kuscia_client",
    srcs = ["kuscia_client.cc"],
    hdrs = ["kuscia_client.h"],
    deps = [
        "//teeapps/utils:io_util",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_grpc_grpc//:grpc++",
        "@kuscia_proto//:cc_kuscia_proto",
        "@yacl//yacl/base:exception",
    ],
)
