# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@teeapps//bazel:teeapps.bzl", "teeapps_cc_library")

package(default_visibility = ["//visibility:public"])

teeapps_cc_library(
    name = "local_task_config",
    srcs = ["local_task_config.cc"],
    hdrs = ["local_task_config.h"],
    deps = [
        "//teeapps/proto:cc_sf_apis_proto",
        "//teeapps/proto:cc_sf_spec_proto",
        "//teeapps/utils:crypto_util",
        "//teeapps/utils:io_util",
        "//teeapps/utils:json2pb",
        "@com_github_rapidjson//:rapidjson",
        "@cppcodec",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/crypto/base:rsa_signing",
    ],
)
