# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "prediction_bias_eval",
    srcs = [
        "prediction_bias_eval.py",
    ],
    deps = [
        "//teeapps/biz/common",
        "//teeapps/proto:py_sf_spec_proto",
        "//teeapps/proto:py_task_proto",
    ],
)

py_test(
    name = "prediction_bias_eval_test",
    srcs = ["prediction_bias_eval_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        ":prediction_bias_eval",
    ],
)
