# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "psi_test",
    srcs = ["psi_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/psi",
    ],
)

py_test(
    name = "biclassification_eval_test",
    srcs = ["biclassification_eval_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/biclassification_eval",
    ],
)

py_test(
    name = "lgbm_test",
    srcs = ["lgbm_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/lgbm",
    ],
)

py_test(
    name = "lr_test",
    srcs = ["lr_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/lr",
    ],
)

py_test(
    name = "predict_test_lr",
    srcs = ["predict_test_lr.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/predict",
    ],
)

py_test(
    name = "predict_test_xgb",
    srcs = ["predict_test_xgb.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/predict",
    ],
)

py_test(
    name = "predict_test_lgbm",
    srcs = ["predict_test_lgbm.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/predict",
    ],
)

py_test(
    name = "prediction_bias_eval_test",
    srcs = ["prediction_bias_eval_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/prediction_bias_eval",
    ],
)

py_test(
    name = "xgb_test",
    srcs = ["xgb_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/xgb",
    ],
)

py_test(
    name = "train_test_split_test",
    srcs = ["train_test_split_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/train_test_split",
    ],
)

py_test(
    name = "woe_binning_test",
    srcs = ["woe_binning_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/woe_binning",
    ],
)

py_test(
    name = "woe_substitution_test",
    srcs = ["woe_substitution_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/woe_substitution",
    ],
)

py_test(
    name = "feature_filter_test",
    srcs = ["feature_filter_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/feature_filter",
    ],
)

py_test(
    name = "pearsonr_test",
    srcs = ["pearsonr_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/pearsonr",
    ],
)

py_test(
    name = "table_statistics_test",
    srcs = ["table_statistics_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/table_statistics",
    ],
)

py_test(
    name = "vif_test",
    srcs = ["vif_test.py"],
    data = [
        "//teeapps/biz/testdata",
    ],
    deps = [
        "//teeapps/biz/vif",
    ],
)
